fix bugs + add some improvements