@@ -6,42 +6,47 @@ import java.io.IOException;
 
 public class WindowDriveEjector extends BaseDriveEjector {
 
-    WindowDriveEjector() {
+	WindowDriveEjector() {
 
-    }
+	}
 
-    @Override
-    protected void doEject(File drive) {
-        if (drive.getAbsolutePath().toLowerCase().equals("c:\\")) {
-            System.out.println("Cannot eject c:\\");
-            return;
-        }
+	@Override
+	protected void doEject(File drive) {
+		if (drive.getAbsolutePath().toLowerCase().equals("c:\\")) {
+			System.out.println("Cannot eject c:\\");
+			return;
+		}
 
-        System.out.println("Ejecting " + drive.getAbsolutePath());
-        try {
-            Process p = Runtime.getRuntime().exec(
-                "tools/removedrive/x64/RemoveDrive.exe " + drive.getAbsolutePath()
-            );
-            DataInputStream dis = new DataInputStream(p.getInputStream());
-            String line;
-            do {
-                //noinspection deprecation
-                line = dis.readLine();
-                if (line != null) {
-                    System.out.println(line);
-                }
+		System.out.println("Ejecting " + drive.getAbsolutePath());
+		try {
+			ProcessBuilder pb = new ProcessBuilder().command(
+					"tools/removedrive/x64/RemoveDrive.exe", drive.getAbsolutePath()
+			);
+			Process p = pb.start();
+			DataInputStream dis = new DataInputStream(p.getInputStream());
+			String line;
+			do {
+				//noinspection deprecation
+				line = dis.readLine();
+				if (line != null) {
+					System.out.println(line);
+				}
 
-            } while (line != null);
+			} while (line != null);
 
-            dis.close();
+			dis.close();
 
-            p.waitFor();
-            p.destroy();
+			p.waitFor();
+			p.destroy();
 
-            System.out.println(drive.getAbsolutePath() + " has been ejected.");
+			if (p.exitValue() == 0) {
+				System.out.println(drive.getAbsolutePath() + " has been ejected.");
+			} else {
+				System.out.println("Failed to eject " + drive.getAbsolutePath() + ".");
+			}
 
-        } catch (IOException | InterruptedException e) {
-            e.printStackTrace();
-        }
-    }
+		} catch (IOException | InterruptedException e) {
+			e.printStackTrace();
+		}
+	}
 }
